feat: re organized lua packages (nvim)

--- a/tmux.conf
+++ b/tmux.conf
@@ -8,17 +8,17 @@ set -g prefix 'C-o'
 bind-key 'C-o' send-prefix
 
 # To work with (neo)vim autoread option
-set -g escape-time 10
+set -g escape-time 0
 set -g focus-events on
 
 set -g mouse off
-set -g cursor-style blinking-bar
 
 set -g popup-border-lines rounded
 set -g popup-border-style fg=colour3
 
 # Vi mode
 set -g mode-keys vi
+set -g status-keys vi
 set -g copy-mode-mark-style fg=colour0,bg=colour15
 
 bind-key -T copy-mode-vi 'v' send -X begin-selection
@@ -47,43 +47,57 @@ set -ga terminal-overrides ",xterm-256color*:Tc"
 
 # Formats
 set -g window-status-style fg=colour8
-set -g window-status-format "#I:#W#{?window_zoomed_flag,#[fg=colour2]Z, } "
+set -g window-status-format "#I:#W#F "
 
 set -g window-status-current-style fg=colour7
-set -g window-status-current-format "#I:#W#{?window_zoomed_flag,#[fg=colour2]Z, } "
+set -g window-status-current-format "#I:#W#F "
 
 set -g pane-border-style fg=colour8,bg=colour0
 set -g pane-active-border-style fg=colour8,bg=colour0
 
 # Keybindings
 # Use 'r' to source the tmux config file
-bind r source-file "${HOME}/.tmux.conf"
+bind-key r source-file "${HOME}/.tmux.conf"
 
 # Use 'n' & 'p' to cycle through the available windows
 bind -r n next-window
 bind -r p previous-window
 
+# Equallize panes
+unbind =
 bind = select-layout even-horizontal
-
+ 
+# Zoom current pane
 unbind z
 bind z resize-pane -Z
 
 # Create a new horizontal pane
+unbind s
 bind s split-window -v -c "#{pane_current_path}"
 
 # Create a new vertical pane
+unbind v
 bind v split-window -h -c "#{pane_current_path}"
 
 # Use 'h', 'j', 'k' & 'l' to change focus of pane
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
+bind-key -r h select-pane -L
+bind-key -r j select-pane -D
+bind-key -r k select-pane -U
+bind-key -r l select-pane -R
+
+# vi keys to resize
+bind -r C-k resize-pane -U 1
+bind -r C-j resize-pane -D 1
+bind -r C-h resize-pane -L 1
+bind -r C-l resize-pane -R 1
 
 # Use '<' & '>' to move windows around
 bind -r < swap-window -d -t -1
 bind -r > swap-window -d -t +1
 
-bind o run-shell "fish --command tmux-open"
-bind S run-shell "fish --command tmux-switch"
-bind -r ^ last-window
+# Launches fish functions to manage sessions
+bind-key o run-shell "fish --command tmux-open"
+bind-key S run-shell "fish --command tmux-switch"
+
+bind-key -r ^ last-window
+
