feat: added a bunch of neovim config and started reworking fish config

--- a/tmux.conf
+++ b/tmux.conf
@@ -11,7 +11,10 @@ bind-key 'C-o' send-prefix
 set -g escape-time 0
 set -g focus-events on
 
+# Don't use the mouse
 set -g mouse off
+# Don't detach upon destroying a session
+set -g detach-on-destroy off
 
 set -g popup-border-lines rounded
 set -g popup-border-style fg=colour3
@@ -100,4 +103,5 @@ bind-key o run-shell "fish --command tmux-open"
 bind-key S run-shell "fish --command tmux-switch"
 
 bind-key -r ^ last-window
+bind-key -r C command-prompt -p "Session name:" "new-session -A -s '%%'"
 
