--- a/tmux.conf
+++ b/tmux.conf
@@ -17,7 +17,7 @@ set -g mouse off
 set -g detach-on-destroy off
 
 set -g popup-border-lines rounded
-set -g popup-border-style fg=colour3
+set -g popup-border-style fg=colour7
 
 # Vi mode
 set -g mode-keys vi
@@ -33,7 +33,7 @@ set -g status-interval 60
 set -g status-position top
 
 set -g status-style fg=colour8,bg=colour0
-set -g status-right "%H:%M #[fg=colour5](#S)"
+set -g status-right "%H:%M"
 
 set -g base-index 1
 set -g pane-base-index 1
@@ -53,7 +53,7 @@ set -g window-status-style fg=colour8
 set -g window-status-format "#I:#W#F "
 
 set -g window-status-current-style fg=colour7
-set -g window-status-current-format "#I:#W#F "
+set -g window-status-current-format "#[fg=colour2][#[fg=default]#I#[fg=colour2]]#[fg=default]#W#[fg=colour2]#F "
 
 set -g pane-border-style fg=colour8,bg=colour0
 set -g pane-active-border-style fg=colour8,bg=colour0
@@ -99,9 +99,8 @@ bind -r < swap-window -d -t -1
 bind -r > swap-window -d -t +1
 
 # Launches fish functions to manage sessions
-bind-key o run-shell "fish --command tmux-open"
-bind-key S run-shell "fish --command tmux-switch"
+bind-key o run-shell "fish -c tmux-open"
+bind-key S run-shell "fish -c tmux-switch"
 
-bind-key -r ^ last-window
-bind-key -r C command-prompt -p "Session name:" "new-session -A -s '%%'"
-
+bind-key -r \\ last-window
+bind-key C command-prompt -p "Session name:" "new-session -A -s '%%'"
