feat: changed abbreviations for docker

--- a/tmux.conf
+++ b/tmux.conf
@@ -100,7 +100,7 @@ bind -r > swap-window -d -t +1
 
 # Launches fish functions to manage sessions
 bind-key o run-shell "fish -c tmux-open"
-bind-key S run-shell "fish -c tmux-switch"
+bind-key l run-shell "fish -c tmux-switch"
 
 bind-key -r \\ last-window
 bind-key C command-prompt -p "Session name:" "new-session -A -s '%%'"
