--- a/tmux.conf
+++ b/tmux.conf
@@ -12,7 +12,7 @@ set -g escape-time 0
 set -g focus-events on
 
 # Don't use the mouse
-set -g mouse off
+set -g mouse on
 # Don't detach upon destroying a session
 set -g detach-on-destroy off
 
@@ -30,7 +30,7 @@ bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel "pbcopy"
 # Statusline and stuff
 set -g status-left ""
 set -g status-interval 60
-set -g status-position top
+set -g status-position bottom
 
 set -g status-style fg=colour8,bg=colour0
 set -g status-right "%H:%M"
@@ -83,10 +83,10 @@ unbind v
 bind v split-window -h -c "#{pane_current_path}"
 
 # Use 'h', 'j', 'k' & 'l' to change focus of pane
-bind-key -r h select-pane -L
-bind-key -r j select-pane -D
-bind-key -r k select-pane -U
-bind-key -r l select-pane -R
+bind-key h select-pane -L
+bind-key j select-pane -D
+bind-key k select-pane -U
+bind-key l select-pane -R
 
 # vi keys to resize
 bind -r C-k resize-pane -U 1
@@ -100,7 +100,7 @@ bind -r > swap-window -d -t +1
 
 # Launches fish functions to manage sessions
 bind-key o run-shell "fish -c tmux-open"
-bind-key l run-shell "fish -c tmux-switch"
+bind-key i run-shell "fish -c tmux-switch"
 
 bind-key -r \\ last-window
 bind-key C command-prompt -p "Session name:" "new-session -A -s '%%'"
