--- a/tmux.conf
+++ b/tmux.conf
@@ -33,7 +33,7 @@ set -g status-interval 60
 set -g status-position bottom
 
 set -g status-style fg=colour8,bg=colour0
-set -g status-right "%H:%M"
+set -g status-right "#S"
 
 set -g base-index 1
 set -g pane-base-index 1
@@ -53,7 +53,7 @@ set -g window-status-style fg=colour8
 set -g window-status-format "#I:#W#F "
 
 set -g window-status-current-style fg=colour7
-set -g window-status-current-format "#[fg=colour2][#[fg=default]#I#[fg=colour2]]#[fg=default]#W#[fg=colour2]#F "
+set -g window-status-current-format "#I:#W#F "
 
 set -g pane-border-style fg=colour8,bg=colour0
 set -g pane-active-border-style fg=colour8,bg=colour0
@@ -99,8 +99,8 @@ bind -r < swap-window -d -t -1
 bind -r > swap-window -d -t +1
 
 # Launches fish functions to manage sessions
-bind-key o run-shell "fish -c tmux-open"
-bind-key j run-shell "fish -c tmux-switch"
+# bind-key o run-shell "fish -c tmux-open"
+bind-key o run-shell "fish -c tmux-switch"
 
 bind-key -r \\ last-window
 bind-key i command-prompt -p "Session name:" "new-session -A -s '%%'"
