--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -34,6 +34,7 @@
     - ~/code
 
 - shell:
+  - [cp -f hyper.js ~/.hyper.js, Setting up Hyper]
   - [ brew bundle, Installing brew packages ]
   - [ git submodule update --init --recursive, Updating git submodules ]
 
