--- a/.tmux.conf
+++ b/.tmux.conf
@@ -82,6 +82,10 @@ bind s split-window -v -c "#{pane_current_path}"
 unbind v
 bind v split-window -h -c "#{pane_current_path}"
 
+# Create a new window
+unbind c
+bind c new-window -c "#{pane_current_path}"
+
 # Use 'h', 'j', 'k' & 'l' to change focus of pane
 bind-key h select-pane -L
 bind-key j select-pane -D
