feat: added gh cli config

--- a/.gitconfig
+++ b/.gitconfig
@@ -5,7 +5,7 @@
 
 [user]
     # The default name
-    name = AlexisMoins
+    name = alexis-moins
     # The default email
     email = moinsalexis@gmail.com
 [init]
