--- a/.config/bat/config
+++ b/.config/bat/config
@@ -3,25 +3,16 @@
 # run `bat --help` to get a list of all possible configuration options.
 
 # Show line numbers, Git modifications (but no file header or grid)
---style="numbers,changes"
+--style="changes"
 
 # Specify desired highlighting theme (e.g. "TwoDark"). Run `bat --list-themes`
 # for a list of all available themes
-#--theme="TwoDark"
+--theme="Nord"
 
 # Enable this to use italic text on the terminal. This is not supported on all
 # terminal emulators (like tmux, by default):
-#--italic-text=always
-
-# Uncomment the following line to disable automatic paging:
-#--paging=never
-
-# Uncomment the following line if you are using less version >= 551 and want to
-# enable mouse scrolling support in `bat` when running inside tmux. This might
-# disable text selection, unless you press shift.
-#--pager="less --RAW-CONTROL-CHARS --quit-if-one-screen --mouse"
+--italic-text=always
 
 # Syntax mappings: map a certain filename pattern to a language.
 #   Example 1: use the C++ syntax for Arduino .ino files
-#--map-syntax "*.ino:C++"
 --map-syntax ".ignore:Git Ignore"
