--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -22,7 +22,7 @@ style = "bold yellow"
 style = "purple"
 
 [git_status]
-style = "red"
+style = "green"
 
 diverged = "$ahead$behind"
 ahead = "↑$count"
