--- a/.tmux.conf
+++ b/.tmux.conf
@@ -32,7 +32,7 @@ set -g status-left ""
 set -g status-interval 60
 set -g status-position bottom
 
-set -g status-style fg=colour8,bg=colour0
+set -g status-style fg=colour8
 set -g status-right "#S"
 
 set -g base-index 1
@@ -55,8 +55,8 @@ set -g window-status-format "#I:#W#F "
 set -g window-status-current-style fg=colour7
 set -g window-status-current-format "#I:#W#F "
 
-set -g pane-border-style fg=colour8,bg=colour0
-set -g pane-active-border-style fg=colour8,bg=colour0
+set -g pane-border-style fg=colour8
+set -g pane-active-border-style fg=colour8
 
 # Keybindings
 # Use 'r' to source the tmux config file
