--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,6 +13,7 @@ set -g focus-events on
 
 # Don't use the mouse
 set -g mouse on
+
 # Don't detach upon destroying a session
 set -g detach-on-destroy off
 
@@ -33,7 +34,7 @@ set -g status-interval 60
 set -g status-position bottom
 
 set -g status-style fg=colour8
-set -g status-right "#S"
+set -g status-right "#S #[fg=colour3]%H:%M"
 
 set -g base-index 1
 set -g pane-base-index 1
@@ -63,8 +64,8 @@ set -g pane-active-border-style fg=colour8
 bind-key r source-file "${HOME}/.tmux.conf"
 
 # Use 'n' & 'p' to cycle through the available windows
-bind -r n next-window
-bind -r p previous-window
+bind n next-window
+bind p previous-window
 
 # Equallize panes
 unbind =
@@ -103,8 +104,9 @@ bind -r < swap-window -d -t -1
 bind -r > swap-window -d -t +1
 
 # Launches fish functions to manage sessions
-# bind-key o run-shell "fish -c tmux-open"
 bind-key o run-shell "fish -c tmux-switch"
 
 bind-key -r \\ last-window
 bind-key i command-prompt -p "Session name:" "new-session -A -s '%%'"
+
+bind-key T break-pane
