--- a/.tmux.conf
+++ b/.tmux.conf
@@ -23,10 +23,14 @@ set -g popup-border-style fg=colour7
 # Vi mode
 set -g mode-keys vi
 set -g status-keys vi
+
 set -g copy-mode-mark-style fg=colour0,bg=colour15
 
 bind-key -T copy-mode-vi 'v' send -X begin-selection
 bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel "pbcopy"
+
+set -ga word-separators '.'
+set -ga word-separators '-'
 
 # Statusline and stuff
 set -g status-left ""
@@ -110,3 +114,6 @@ bind-key -r \\ last-window
 bind-key i command-prompt -p "Session name:" "new-session -A -s '%%'"
 
 bind-key T break-pane
+
+bind-key V copy-mode
+bind-key P paste-buffer
