wip(nvim): cleaned packer and added LSP figets

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -110,8 +110,11 @@ bind -r > swap-window -d -t +1
 # Launches fish functions to manage sessions
 bind-key o run-shell "fish -c tmux-switch"
 
-bind-key -r \\ last-window
-bind-key i command-prompt -p "Session name:" "new-session -A -s '%%'"
+# Create a new empty session with the given name
+bind-key i command-prompt -p "Session:" "new-session -A -s '%%'"
+
+# Launches the t function with the given input
+bind-key t command-prompt -p "Search:" "run-shell 'fish -c \"t %%\"'
 
 bind-key T break-pane
 
