--- a/.tmux.conf
+++ b/.tmux.conf
@@ -29,16 +29,13 @@ set -g copy-mode-mark-style fg=colour0,bg=colour15
 bind-key -T copy-mode-vi 'v' send -X begin-selection
 bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel "pbcopy"
 
-set -ga word-separators '.'
-set -ga word-separators '-'
-
 # Statusline and stuff
 set -g status-left ""
 set -g status-interval 60
 set -g status-position bottom
 
 set -g status-style fg=colour8
-set -g status-right "#S #[fg=colour3]%H:%M"
+set -g status-right "#S #[fg=colour2]%H:%M"
 
 set -g base-index 1
 set -g pane-base-index 1
@@ -55,10 +52,10 @@ set -ga terminal-overrides ",xterm-256color*:Tc"
 
 # Formats
 set -g window-status-style fg=colour8
-set -g window-status-format "#I:#W#F "
+set -g window-status-format "#W#F "
 
 set -g window-status-current-style fg=colour7
-set -g window-status-current-format "#I:#W#F "
+set -g window-status-current-format "#W#F "
 
 set -g pane-border-style fg=colour8
 set -g pane-active-border-style fg=colour8
