--- a/.gitconfig
+++ b/.gitconfig
@@ -49,11 +49,12 @@
     dt = difftool
     mt = mergetool
 
-    ls = log --all
+    log = log --all
     bl = branch -va
 
     amend = commit --amend --no-edit
     ignore = !git rm -r --cached . && git add -A
+
     this = !git init && git add -A && git commit -m 'feat: 🎉 initial commit'
     oops = !git stash && git co -b oops && git stash pop
 
