--- a/.ssh/config
+++ b/.ssh/config
@@ -6,3 +6,8 @@ Host github.com
     Hostname github.com
     PreferredAuthentications publickey
     IdentityFile ~/.ssh/github
+
+Host github-unifox
+    Hostname github.com
+    PreferredAuthentications publickey
+    IdentityFile ~/.ssh/unifox
