--- a/.tmux.conf
+++ b/.tmux.conf
@@ -33,9 +33,11 @@ bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel "pbcopy"
 set -g status-left ""
 set -g status-interval 60
 set -g status-position bottom
+set -g status-justify right
 
 set -g status-style fg=colour8
-set -g status-right "#S #[fg=colour2]%H:%M"
+# set -g status-right "#S #[fg=colour2]%H:%M"
+set -g status-right ""
 
 set -g base-index 1
 set -g pane-base-index 1
@@ -65,8 +67,8 @@ set -g pane-active-border-style fg=colour8
 bind-key r source-file "${HOME}/.tmux.conf"
 
 # Use 'n' & 'p' to cycle through the available windows
-bind n next-window
-bind p previous-window
+bind -r n next-window
+bind -r p previous-window
 
 # Equallize panes
 unbind =
