--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,8 +4,8 @@
 
 # Sets ˆO as the new prefix
 unbind C-b
-set -g prefix 'C-o'
-bind-key 'C-o' send-prefix
+set -g prefix 'C-a'
+bind-key 'C-a' send-prefix
 
 # To work with (neo)vim autoread option
 set -g escape-time 0
@@ -36,8 +36,7 @@ set -g status-position bottom
 set -g status-justify right
 
 set -g status-style fg=colour8
-# set -g status-right "#S #[fg=colour2]%H:%M"
-set -g status-right ""
+set -g status-right " #[fg=colour2]%H:%M"
 
 set -g base-index 1
 set -g pane-base-index 1
