--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,8 +1,8 @@
 # tmux configuration
 # Author: Alexis Moins
-# Creation: 13 aoû 2021
 
 # Sets ˆO as the new prefix
+# Creation: 13 aoû 2021
 unbind C-b
 set -g prefix 'C-a'
 bind-key 'C-a' send-prefix
@@ -33,10 +33,10 @@ bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel "pbcopy"
 set -g status-left ""
 set -g status-interval 60
 set -g status-position bottom
-set -g status-justify right
+set -g status-justify centre
 
 set -g status-style fg=colour8
-set -g status-right " #S #[fg=colour2]%H:%M"
+set -g status-right " #S  #[fg=colour2]%H:%M"
 
 set -g base-index 1
 set -g pane-base-index 1
