improv(tmux): enhanced C-a e sequence to run t interactively

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,8 +11,8 @@ bind-key 'C-a' send-prefix
 set -g escape-time 0
 set -g focus-events on
 
-# Don't use the mouse
 set -g mouse on
+set -g cursor-style blinking-bar
 
 # Don't detach upon destroying a session
 set -g detach-on-destroy off
@@ -43,13 +43,19 @@ set -g pane-base-index 1
 set -g renumber-windows on
 
 set -g bell-action none
-set -g message-style fg=colour1
+
+# Messages
+set -g message-style fg=colour4
+
+# Vi mode
+set -g message-command-style fg=colour3
+
+# Search mode
 set -g mode-style fg=colour1
 
 # tell Tmux that outside terminal supports true color
 set -g default-terminal "screen-256color"
 set -ga terminal-overrides ",xterm-256color*:Tc"
-
 
 # Formats
 set -g window-status-style fg=colour8
@@ -63,7 +69,7 @@ set -g pane-active-border-style fg=colour8
 
 # Keybindings
 # Use 'r' to source the tmux config file
-bind-key r source-file "${HOME}/.tmux.conf"
+bind-key r source-file "${HOME}/.tmux.conf"\; display-message "(reloaded)"
 
 # Use 'n' & 'p' to cycle through the available windows
 bind -r n next-window
@@ -109,10 +115,10 @@ bind -r > swap-window -d -t +1
 bind-key o run-shell "fish -c tmux-switch"
 
 # Create a new empty session with the given name
-bind-key i command-prompt -p "Session:" "new-session -A -s '%%'"
+bind-key i command-prompt -p "(create-session)" "new-session -A -c ${HOME}/dev -s %%"
 
 # Launches the t function with the given input
-bind-key t command-prompt -p "Search:" "run-shell 'fish -c \"t %%\"'
+bind-key e command-prompt -p "(custom-search)" "run-shell 'fish -c \"t %%\"'"
 
 bind-key T break-pane
 
