feat(tmux, neovim): changed tmux colors and neovim winbar format

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -64,8 +64,8 @@ set -g window-status-format "#W#F "
 set -g window-status-current-style fg=colour7
 set -g window-status-current-format "#W#F "
 
-set -g pane-border-style fg=colour8
-set -g pane-active-border-style fg=colour8
+set -g pane-border-style "fg=#181926"
+set -g pane-active-border-style "fg=#181926"
 
 # Keybindings
 # Use 'r' to source the tmux config file
@@ -78,7 +78,7 @@ bind -r p previous-window
 # Equallize panes
 unbind =
 bind = select-layout even-horizontal
- 
+
 # Zoom current pane
 unbind z
 bind z resize-pane -Z
