feat(tmux): changed status style

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -33,10 +33,10 @@ bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel "pbcopy"
 set -g status-left ""
 set -g status-interval 60
 set -g status-position bottom
-set -g status-justify centre
+set -g status-justify right
 
 set -g status-style fg=colour8
-set -g status-right "#S #[fg=colour2]%H:%M"
+set -g status-right "#[fg=colour2]|#[fg=default] #S #[fg=colour2]%H:%M"
 
 set -g base-index 1
 set -g pane-base-index 1
@@ -59,10 +59,10 @@ set -ga terminal-overrides ",xterm-256color*:Tc"
 
 # Formats
 set -g window-status-style fg=colour8
-set -g window-status-format "#W#F "
+set -g window-status-format "#W#{?window_zoomed_flag,#[fg=colour2]Z, } "
 
 set -g window-status-current-style fg=colour7
-set -g window-status-current-format "#W#F "
+set -g window-status-current-format "#W#{?window_zoomed_flag,#[fg=colour2]Z, } "
 
 set -g pane-border-style "fg=#181926"
 set -g pane-active-border-style "fg=#181926"
