feat(*): minor changes

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -36,7 +36,7 @@ set -g status-position bottom
 set -g status-justify right
 
 set -g status-style fg=colour8
-set -g status-right "#[fg=colour2]|#[fg=default] #S #[fg=colour2]%H:%M"
+set -g status-right "| #S #[fg=colour2]%H:%M"
 
 set -g base-index 1
 set -g pane-base-index 1
