chore(nvim): changed mason-lspconfig lua LSP config

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -72,8 +72,8 @@ set -g pane-active-border-style "fg=#181926"
 bind-key r source-file "${HOME}/.tmux.conf"\; display-message "(reloaded)"
 
 # Use 'n' & 'p' to cycle through the available windows
-bind -r n next-window
-bind -r p previous-window
+bind n next-window
+bind p previous-window
 
 # Equallize panes
 unbind =
