refactor(nvim): minor changes [mappings, tmux]

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -59,7 +59,7 @@ set -ga terminal-overrides ",xterm-256color*:Tc"
 
 # Formats
 set -g window-status-style fg=colour8
-set -g window-status-format "#W#{?window_zoomed_flag,#[fg=colour2]Z, } "
+set -g window-status-format "#[fg=colour4]#I:#[fg=default]#W#{?window_zoomed_flag,#[fg=colour2]Z, } "
 
 set -g window-status-current-style fg=colour7
 set -g window-status-current-format "#W#{?window_zoomed_flag,#[fg=colour2]Z, } "
