--- a/.tmux.conf
+++ b/.tmux.conf
@@ -36,7 +36,7 @@ set -g status-position bottom
 set -g status-justify right
 
 set -g status-style fg=colour8
-set -g status-right "| #S #[fg=colour2]%H:%M"
+set -g status-right "#[fg=colour2]|#[fg=default] #S #[fg=colour2]%H:%M"
 
 set -g base-index 1
 set -g pane-base-index 1
@@ -59,7 +59,7 @@ set -ga terminal-overrides ",xterm-256color*:Tc"
 
 # Formats
 set -g window-status-style fg=colour8
-set -g window-status-format "#[fg=colour4]#I:#[fg=default]#W#{?window_zoomed_flag,#[fg=colour2]Z, } "
+set -g window-status-format "#W#{?window_zoomed_flag,#[fg=colour2]Z, } "
 
 set -g window-status-current-style fg=colour7
 set -g window-status-current-format "#W#{?window_zoomed_flag,#[fg=colour2]Z, } "
