feat(neovim): added grapple.nvim to handle tag workflow

--- a/.gitconfig
+++ b/.gitconfig
@@ -36,6 +36,7 @@
 
 [alias]
     ci = commit
+    force = !git amend && git push -f
 
     co = checkout
     br = branch --format '%(color:red)%(HEAD)%(color:white) %(align:30)%(refname:short)%(end) %(align:30)%(color:blue)%(upstream:short)%(color:white) %(color:magenta)%(upstream:track)%(color:white)%(end)'
