--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -50,8 +50,8 @@ style = "yellow"
 
 [character]
 # ❯ or ➜
-success_symbol = "[¬](white)"
-error_symbol = "[¬](yellow)"
+success_symbol = "[➜](white)"
+error_symbol = "[➜](yellow)"
 
 vimcmd_symbol = "[N](green)"
 vimcmd_visual_symbol = "[V](purple)"
