chore: changed bat config to disable italics, added ruby to asdf (for brew-gem)

--- a/.config/bat/config
+++ b/.config/bat/config
@@ -3,7 +3,7 @@
 # run `bat --help` to get a list of all possible configuration options.
 
 # Show line numbers, Git modifications (but no file header or grid)
---style="changes"
+--style="changes,numbers"
 
 
 # Specify desired highlighting theme (e.g. "TwoDark"). Run `bat --list-themes`
@@ -13,4 +13,4 @@
 
 # Enable this to use italic text on the terminal. This is not supported on all
 # terminal emulators (like tmux, by default):
---italic-text=always
+--italic-text=never
